# hashcalc-neo

./: README.md  index.html  package-lock.json  package.json  settings.html  vite.config.js
.github/workflows/: release.yml
src/: main.js  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
